--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                                 <div class="col-lg-0 col-xl-5"></div>
                                 <div class="col-xl-7 animated fadeInLeft">
                                     <div class="text-sm-center text-md-end">
-                                        <h4 class="text-primary text-uppercase fw-bold mb-4">Welcome To Stocker</h4>
-                                        <h1 class="display-4 text-uppercase text-white mb-4">Invest your money with higher return</h1>
-                                        <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy... 
+                                        <h4 class="text-primary text-uppercase fw-bold mb-4">Welcome To</h4>
+                                        <h1 class="display-4 text-uppercase text-white mb-4">NextWave Technologies</h1>
+                                        <p class="mb-5 fs-5">The Next Wave of IT 
                                         </p>
                                         <div class="d-flex justify-content-center justify-content-md-end flex-shrink-0 mb-4">
                                             <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
