--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><i class="fas fa-search-dollar me-3"></i>Stocker</h1>
+                    <h1 class="text-primary"><i class="fas fa-search-dollar me-3"></i>NextWave Technologies</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -181,8 +181,12 @@
                     <div class="col-xl-7 wow fadeInLeft" data-wow-delay="0.2s">
                         <div>
                             <h4 class="text-primary">About Us</h4>
-                            <h1 class="display-5 mb-4">Meet our company unless miss the opportunity</h1>
-                            <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum velit temporibus repudiandae ipsa, eaque perspiciatis cumque incidunt tenetur sequi reiciendis.
+                            <h1 class="display-5 mb-4">Who are we and what do we do?</h1>
+                            <p class="mb-4">
+                                Whatever your IT needs may be—whether it's for your home or business—NextWave Technologies is here to help you navigate the 
+                                exciting world of technology with ease! From professional TV mounting and security camera installations to website maintenance 
+                                and remote assistance, we've got a wide range of services to take the stress off your plate. Curious to learn more? Feel free 
+                                to reach out and discover how we can support you!
                             </p>
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-6 col-xl-6">
