--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         <!-- FAQs End -->
 
 
-        <!-- Team Start -->
+        <!-- Team Start 
         <div class="container-fluid team pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -736,7 +736,7 @@
                 </div>
             </div>
         </div>
-        <!-- Team End -->
+        Team End -->
 
         <!-- Testimonial Start -->
         <div class="container-fluid testimonial pb-5">
@@ -872,7 +872,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-4">
                         <div class="footer-item">
                             <a href="index.html" class="p-0">
-                                <h4 class="text-white"><i class="fas fa-search-dollar me-3"></i>Stocker</h4>
+                                <h4 class="text-white"><i class="fas fa-search-dollar me-3"></i>NextWave Technologies</h4>
                                 <!-- <img src="img/logo.png" alt="Logo"> -->
                             </a>
                             <p class="mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
