--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         </div>
         <!-- Offer End -->
 
-        <!-- Blog Start -->
+        <!-- Blog Start 
         <div class="container-fluid blog pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -567,7 +567,7 @@
                 </div>
             </div>
         </div>
-        <!-- Blog End -->
+         Blog End -->
 
 
         <!-- FAQs Start -->
