--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="header-carousel-item">
-                    <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
+                    <img src="img/c2.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row g-5">
