--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-xl-5 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded position-relative overflow-hidden">
-                            <img src="img/about-2.png" class="img-fluid rounded w-100" alt="">
+                            <img src="img/IMG_0524.PNG" class="img-fluid rounded w-100" alt="">
                             
                             <div class="" style="position: absolute; top: -15px; right: -15px;">
                                 <img src="img/about-3.png" class="img-fluid" style="width: 150px; height: 150px; opacity: 0.7;" alt="">
