--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <img src="img/about-4.png" class="img-fluid" style="width: 100px; height: 150px; opacity: 0.9;" alt="">
                             </div>
                             <div class="rounded-bottom">
-                                <img src="img/about-5.jpg" class="img-fluid rounded-bottom w-100" alt="">
+                                <img src="img/a2.jpg" class="img-fluid rounded-bottom w-100" alt="">
                             </div>
                         </div>
                     </div>
