--- a/index.html
+++ b/index.html
@@ -219,13 +219,6 @@
                     <div class="col-xl-5 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded position-relative overflow-hidden">
                             <img src="img/IMG_0524.PNG" class="img-fluid rounded w-100" alt="">
-                            
-                            <div class="" style="position: absolute; top: -15px; right: -15px;">
-                                <img src="img/about-3.png" class="img-fluid" style="width: 150px; height: 150px; opacity: 0.7;" alt="">
-                            </div>
-                            <div class="" style="position: absolute; top: -20px; left: 10px; transform: rotate(90deg);">
-                                <img src="img/about-4.png" class="img-fluid" style="width: 100px; height: 150px; opacity: 0.9;" alt="">
-                            </div>
                             <div class="rounded-bottom">
                                 <img src="img/a2.jpg" class="img-fluid rounded-bottom w-100" alt="">
                             </div>
@@ -249,11 +242,15 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Managed Services</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    Our Managed IT Services provide proactive, reliable support to keep your business running smoothly. 
+                                    From network monitoring and cybersecurity to data backups and software updates, we handle the day-to-day 
+                                    IT operations so you can focus on what matters most—growing your business. With expert management, enhanced 
+                                    security, and 24/7 support, we ensure your technology is always performing at its best.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
@@ -262,11 +259,17 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s2.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Residential</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    We provide comprehensive IT support for your home, from setting up secure Wi-Fi 
+                                    and troubleshooting devices to installing security cameras, smart home systems, 
+                                    and mounting TVs and sound systems. Whether you're enhancing your home’s security 
+                                    or upgrading your entertainment setup, our expert team ensures everything runs 
+                                    smoothly and seamlessly. With friendly, reliable service, we make technology work 
+                                    for you—so you can enjoy a smarter, more connected home.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
@@ -275,11 +278,18 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s3..jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Networks and Security</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    We specialize in designing and implementing robust network infrastructures for businesses 
+                                    of all sizes. Our network installation services ensure seamless connectivity, from routers 
+                                    and switches to Wi-Fi access points and fiber optic setups. In addition, we provide 
+                                    comprehensive security solutions, including firewall configurations, surveillance systems, 
+                                    and secure access control, to protect your business from cyber threats and physical security 
+                                    risks. With our expert support, your company can rely on fast, secure, and scalable technology 
+                                    to drive success and growth.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
@@ -288,11 +298,15 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s4.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Phone and Tablet Repair</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    Get your devices back in action with our fast, reliable phone and tablet repair services. 
+                                    From cracked screens and battery replacements to water damage and hardware issues, our expert 
+                                    technicians provide quality repairs using high-grade parts. We offer affordable solutions to 
+                                    get your devices working like new—so you can stay connected without the hassle.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
@@ -301,11 +315,18 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-5.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s5.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    Whether you need a high-performance custom PC built to your exact specifications or 
+                                    professional repair services for desktops and laptops, we've got you covered. Our expert 
+                                    technicians specialize in designing and assembling powerful, tailor-made computers that 
+                                    meet your unique needs—whether for gaming, business, or everyday use. We also provide fast, 
+                                    reliable repairs for desktops and laptops, from screen replacements and hardware upgrades 
+                                    to troubleshooting and software fixes. With top-quality components and skilled service, we 
+                                    ensure your devices perform at their best.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
@@ -314,11 +335,18 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/service-6.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s6.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">IT Consulting</a>
-                                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, sint? Excepturi facilis neque nesciunt similique officiis veritatis,
+                                <p class="mb-4">
+                                    Unlock the full potential of your business with our expert IT consulting services. 
+                                    We work closely with your team to assess your technology needs, optimize your 
+                                    infrastructure, and develop tailored strategies that drive efficiency, innovation, 
+                                    and growth. From streamlining operations and enhancing cybersecurity to selecting the 
+                                    right software and hardware solutions, we provide actionable insights and solutions 
+                                    to keep your business ahead of the curve. With our guidance, you’ll make smarter 
+                                    technology decisions that support your long-term goals.
                                 </p>
                                 <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                             </div>
