--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/s1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s1.jpeg" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4"> Managed Services</a>
@@ -315,7 +315,7 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-img">
-                                <img src="img/s5.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                <img src="img/s5.webp" class="img-fluid rounded-top w-100" alt="Image">
                             </div>
                             <div class="rounded-bottom p-4">
                                 <a href="#" class="h4 d-inline-block mb-4">Computer Building and Repair</a>
