--- a/index.html
+++ b/index.html
@@ -361,9 +361,14 @@
         <div class="container-fluid feature pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Our Features</h4>
-                    <h1 class="display-5 mb-4">Connecting businesses, ideas, and people for greater impact.</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <h4 class="text-primary">Why Choose Us?</h4>
+                    <h1 class="display-5 mb-4">The Next Wave of IT</h1>
+                    <p class="mb-0">
+                        NextWave Technologies is the ideal choice for all your IT needs, whether residential or commercial. 
+                        They offer cutting-edge solutions tailored to your specific requirements, from smart home integration 
+                        and cybersecurity for homes to scalable, secure services for businesses. With expert support and a 
+                        focus on reliability and innovation, NextWave ensures your technology runs smoothly, allowing you to 
+                        focus on what matters most.
                     </p>
                 </div>
                 <div class="row g-4">
@@ -372,7 +377,7 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-chart-line fa-4x text-primary"></i>
                             </div>
-                            <h4>Global Management</h4>
+                            <h4>Small Buissness</h4>
                             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
@@ -383,7 +388,7 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-university fa-4x text-primary"></i>
                             </div>
-                            <h4>Corporate Banking</h4>
+                            <h4>Qualified Technitions</h4>
                             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
@@ -405,7 +410,7 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-hand-holding-usd fa-4x text-primary"></i>
                             </div>
-                            <h4>Investment Bank</h4>
+                            <h4>Scalable Solutions That Grow With Your Business </h4>
                             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
