--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="row gx-0 align-items-center">
                 <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="tel:+01234567890" class="text-muted small me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+01234567890</a>
-                        <a href="mailto:example@gmail.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>Example@gmail.com</a>
+                        <a href="tel:+18108821776" class="text-muted small me-4"><i class="fas fa-phone-alt text-primary me-2"></i>+1(810)882-1776</a>
+                        <a href="mailto:thenextwaveit@gmail.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>thenextwaveit@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
@@ -72,7 +72,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><i class="fas fa-search-dollar me-3"></i>NextWave Technologies</h1>
+                    <h1 class="text-primary"><i class="fas fa-wave me-3"></i>NextWave Technologies</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
