--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@
                                         <div><i class="fas fa-lightbulb fa-3x text-primary"></i></div>
                                         <div class="ms-4">
                                             <h4>Business Consuluting</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                            <p>
+                                                Our IT consulting services provide expert guidance to help you optimize technology, streamline operations, 
+                                                and achieve your business goals with customized, forward-thinking solutions.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -196,20 +199,22 @@
                                     <div class="d-flex">
                                         <div><i class="bi bi-bookmark-heart-fill fa-3x text-primary"></i></div>
                                         <div class="ms-4">
-                                            <h4>Year Of Expertise</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                            <h4>Reliable Support, Anytime, Anywhere</h4>
+                                            <p>
+                                                We are committed to traveling across the state to bring you affordable, reliable IT solutions wherever you are.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <a href="#" class="btn btn-primary rounded-pill py-3 px-5 flex-shrink-0">Discover Now</a>
+                                    <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 flex-shrink-0">Discover Now</a>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="d-flex">
                                         <i class="fas fa-phone-alt fa-2x text-primary me-4"></i>
                                         <div>
                                             <h4>Call Us</h4>
-                                            <p class="mb-0 fs-5" style="letter-spacing: 1px;">+01234567890</p>
+                                            <p class="mb-0 fs-5" style="letter-spacing: 1px;">+1(810)882-1776</p>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +240,11 @@
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Our Services</h4>
                     <h1 class="display-5 mb-4">We Services provided best offer</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <p class="mb-0">
+                        We offer a wide range of IT services, including network setup, cybersecurity, cloud solutions, 
+                        data management, and tech support for both residential and commercial clients. Our team is dedicated 
+                        to providing customized, reliable, and affordable solutions that meet your unique needs and keep 
+                        your technology running smoothly.
                     </p>
                 </div>
                 <div class="row g-4">
@@ -426,25 +435,28 @@
         <div class="container-fluid offer-section pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Our Offer</h4>
-                    <h1 class="display-5 mb-4">Benefits We offer</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <h4 class="text-primary">Managed Services</h4>
+                    <h1 class="display-5 mb-4">Plans We offer</h1>
+                    <p class="mb-0">
+                        We offer comprehensive managed services that include remote monitoring and antivirus protection to 
+                        keep your systems secure. Our larger plans also feature advanced email filtering and phishing training 
+                        to help safeguard against cyber threats and ensure your team is well-prepared.
                     </p>
                 </div>
                 <div class="row g-5 align-items-center">
                     <div class="col-xl-5 wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="nav nav-pills bg-light rounded p-5">
                             <a class="accordion-link p-4 active mb-4" data-bs-toggle="pill" href="#collapseOne">
-                                <h5 class="mb-0">Lending money for investment of your new projects</h5>
+                                <h5 class="mb-0">Basic Monitoring and Protection Plan</h5>
                             </a>
                             <a class="accordion-link p-4 mb-4" data-bs-toggle="pill" href="#collapseTwo">
-                                <h5 class="mb-0">Lending money for investment of your new projects</h5>
+                                <h5 class="mb-0">Plus Monitoring and Protection Plan</h5>
                             </a>
                             <a class="accordion-link p-4 mb-4" data-bs-toggle="pill" href="#collapseThree">
-                                <h5 class="mb-0">Mobile payment is more flexible and easy for all investors</h5>
+                                <h5 class="mb-0">Proffesional Monitoring and Protection Plan</h5>
                             </a>
                             <a class="accordion-link p-4 mb-0" data-bs-toggle="pill" href="#collapseFour">
-                                <h5 class="mb-0">all transaction is kept free for the member of pro traders</h5>
+                                <h5 class="mb-0">Complete Monitoring and Protection Plan</h5>
                             </a>
                         </div>
                     </div>
